unpackaged/main/default/objects/Account/fields/DB_Surface_Financiere__c.field-meta.xml
<CustomField>
    <fullName>DB_Surface_Financiere__c</fullName>
    <label>Surface financière</label>
    <length>255</length>
    <type>Text</type>
</CustomField>