unpackaged/main/default/objects/Account/fields/DB_Telephone__c.field-meta.xml
<CustomField>
    <fullName>DB_Telephone__c</fullName>
    <label>Téléphone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>