unpackaged/main/default/objects/Account/fields/DB_Titre_Dirigeant__c.field-meta.xml
<CustomField>
    <fullName>DB_Titre_Dirigeant__c</fullName>
    <label>Titre du dirigeant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>