unpackaged/main/default/objects/Account/fields/DB_Type_RCS__c.field-meta.xml
<CustomField>
    <fullName>DB_Type_RCS__c</fullName>
    <label>Type RCS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>