unpackaged/main/default/objects/Account/fields/DB_URL_SiteWeb__c.field-meta.xml
<CustomField>
    <fullName>DB_URL_SiteWeb__c</fullName>
    <label>URL Site web</label>
    <length>255</length>
    <type>Text</type>
</CustomField>