unpackaged/main/default/objects/Account/fields/DB_Valeur_ID_Prefere__c.field-meta.xml
<CustomField>
    <fullName>DB_Valeur_ID_Prefere__c</fullName>
    <label>ID national 1 (Valeur)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>