unpackaged/main/default/objects/Account/fields/DB_Valeur_Taxe__c.field-meta.xml
<CustomField>
    <fullName>DB_Valeur_Taxe__c</fullName>
    <label>ID Taxe (Valeur)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>