unpackaged/main/default/objects/Account/fields/DB_Ville_DU__c.field-meta.xml
<CustomField>
    <fullName>DB_Ville_DU__c</fullName>
    <label>Ville DU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>