unpackaged/main/default/objects/Account/fields/DB_Ville_GU__c.field-meta.xml
<CustomField>
    <fullName>DB_Ville_GU__c</fullName>
    <label>Ville GU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>