unpackaged/main/default/objects/Account/fields/DB_Ville_HQ__c.field-meta.xml
<CustomField>
    <fullName>DB_Ville_HQ__c</fullName>
    <label>Ville HQ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>