unpackaged/main/default/objects/Account/fields/Delai_reglement__c.field-meta.xml
<CustomField>
    <fullName>Delai_reglement__c</fullName>
    <defaultValue>&quot;30 jours&quot;</defaultValue>
    <label>Délai de règlement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Delai_reglement_CD</valueSetName>
    </valueSet>
</CustomField>