unpackaged/main/default/objects/Account/fields/Derniere_Activite_RDV_ou_Visite__c.field-meta.xml
<CustomField>
    <fullName>Derniere_Activite_RDV_ou_Visite__c</fullName>
    <label>Dernière Activité RDV ou Visite</label>
    <type>Date</type>
</CustomField>