unpackaged/main/default/objects/Account/fields/Derniere_activite_sur_le_compte__c.field-meta.xml
<CustomField>
    <fullName>Derniere_activite_sur_le_compte__c</fullName>
    <description>Date/Heure de création tâche sur compte
Date/Heure de modification tâche sur compte
Date/Heure de création Evènement sur compte 
Date/Heure de modification Evènement sur compte 
Date/Heure de création opportunité
Date/Heure de modification opportunité [Statut 1,2,3,4,5]
Date/Heure de création Tâche sur Opportunité
Date/Heure de modification tâche sur opportunité
Date/Heure de création Evènement sur Opportunité 
Date/Heure  de modification Evènement sur Opportunité</description>
    <label>Dernière activité sur le compte</label>
    <type>DateTime</type>
</CustomField>