unpackaged/main/default/objects/Account/fields/DerniereModificationReellePar__c.field-meta.xml
<CustomField>
    <fullName>DerniereModificationReellePar__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dernière modification réelle par</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Comptes</relationshipName>
    <type>Lookup</type>
</CustomField>