unpackaged/main/default/objects/Account/fields/DescriptionDetaillee__c.field-meta.xml
<CustomField>
    <fullName>DescriptionDetaillee__c</fullName>
    <label>Description détaillée</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>