unpackaged/main/default/objects/Account/fields/Doublon__c.field-meta.xml
<CustomField>
    <fullName>Doublon__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Doublon</label>
    <type>Checkbox</type>
</CustomField>