unpackaged/main/default/objects/Account/fields/Effectif__c.field-meta.xml
<CustomField>
    <fullName>Effectif__c</fullName>
    <label>Effectif</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 à 9</fullName>
            </value>
            <value>
                <fullName>10 à 49</fullName>
            </value>
            <value>
                <fullName>50 à 99</fullName>
            </value>
            <value>
                <fullName>100 à 499</fullName>
            </value>
            <value>
                <fullName>500 à 999</fullName>
            </value>
            <value>
                <fullName>1000 et plus</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>