unpackaged/main/default/objects/Account/fields/Eligible_pour_ERP_Extraction__c.field-meta.xml
<CustomField>
    <fullName>Eligible_pour_ERP_Extraction__c</fullName>
    <formula>IF (Number_of_Won_Opportunities__c &gt; 0,true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Eligible pour ERP Extraction</label>
    <type>Checkbox</type>
</CustomField>