unpackaged/main/default/objects/Account/fields/Email_atelier__c.field-meta.xml
<CustomField>
    <fullName>Email_atelier__c</fullName>
    <label>Email atelier</label>
    <type>Email</type>
</CustomField>