unpackaged/main/default/objects/Account/fields/EmailPrincipal__c.field-meta.xml
<CustomField>
    <fullName>EmailPrincipal__c</fullName>
    <label>Email principal</label>
    <type>Email</type>
</CustomField>