unpackaged/main/default/objects/Account/fields/Empreinte_Geo_Icon__c.field-meta.xml
<CustomField>
    <fullName>Empreinte_Geo_Icon__c</fullName>
    <formula>IF
(
 ISPICKVAL(Empreinte_Geographique__c, &#39;I&#39;),
 IMAGE(&quot;/resource/Empreinte_Geo_I&quot;, &quot;International&quot;, 32, 32),
 IF
 (
  ISPICKVAL(Empreinte_Geographique__c, &#39;N&#39;),
  IMAGE(&quot;/resource/Empreinte_Geo_N&quot;, &quot;National&quot;, 32, 32),
  IMAGE(&quot;/resource/Empreinte_Geo_R&quot;, &quot;Régional&quot;, 32, 32)
 )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Empreinte_Géo_Icon</label>
    <type>Text</type>
</CustomField>