unpackaged/main/default/objects/Account/fields/Empreinte_Geographique__c.field-meta.xml
<CustomField>
    <fullName>Empreinte_Geographique__c</fullName>
    <label>Empreinte Géographique</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>I</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
            <value>
                <fullName>R</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>