unpackaged/main/default/objects/Account/fields/Empreinte_Geographique_V2__c.field-meta.xml
<CustomField>
    <fullName>Empreinte_Geographique_V2__c</fullName>
    <description>Calcul l&#39;empreinte géographique en fonction du compte legal parent</description>
    <formula>if(Compte_Parent_legal__c==null,&#39;No parent&#39;,
if(AND(IsDU__c  ,text(PaysRegionPF__c) ==  text(Compte_Parent_legal__r.PaysRegionPF__c )),&#39;N&#39;,
if(AND(IsDU__c , text(PaysRegionPF__c) &lt;&gt;  text(Compte_Parent_legal__r.PaysRegionPF__c )), &#39;I&#39;,
if(AND(not(IsDU__c ) ,  OR(LEFT(text(PaysRegionPF__c) , 4)==&#39;DRO &#39;,LEFT(text(PaysRegionPF__c) , 4)==&#39;STFR&#39;),text(PaysRegionPF__c) ==  text(Compte_Parent_legal__r.PaysRegionPF__c )),&#39;R&#39;,
if(AND(not(IsDU__c ) ,  OR(LEFT(text(PaysRegionPF__c) , 4)==&#39;DRO &#39;,LEFT(text(PaysRegionPF__c) , 4)==&#39;STFR&#39;),text(PaysRegionPF__c) &lt;&gt;  text(Compte_Parent_legal__r.PaysRegionPF__c )),&#39;N&#39;,
if(AND(not(IsDU__c ) ,  LEFT(text(PaysRegionPF__c) , 4)&lt;&gt;&#39;DRO &#39;,LEFT(text(PaysRegionPF__c) , 4)&lt;&gt;&#39;STFR&#39;,text(PaysRegionPF__c) ==  text(Compte_Parent_legal__r.PaysRegionPF__c )),&#39;R&#39;,
if(AND(not(IsDU__c ) ,  LEFT(text(PaysRegionPF__c) , 4)&lt;&gt;&#39;DRO &#39;,LEFT(text(PaysRegionPF__c) , 4)&lt;&gt;&#39;STFR&#39;,text(PaysRegionPF__c) &lt;&gt;  text(Compte_Parent_legal__r.PaysRegionPF__c )),&#39;Data Error&#39;,&#39;Else&#39;)
)
)
)
)
)
)</formula>
    <label>Empreinte Géographique V2</label>
    <type>Text</type>
</CustomField>