unpackaged/main/default/objects/Account/fields/EstCompteParent__c.field-meta.xml
<CustomField>
    <fullName>EstCompteParent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Est un compte parent</label>
    <type>Checkbox</type>
</CustomField>