unpackaged/main/default/objects/Account/fields/EstMembreGroupement__c.field-meta.xml
<CustomField>
    <fullName>EstMembreGroupement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Est membre d&#39;un groupement</label>
    <type>Checkbox</type>
</CustomField>