unpackaged/main/default/objects/Account/fields/Exclusif_Meubles__c.field-meta.xml
<CustomField>
    <fullName>Exclusif_Meubles__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check &quot;Exclusive&quot; only if ALL the customer&#39;s park (Refrigerated Display units) is provided by PETIT FORESTIER (No property, no other rental company, ...)</inlineHelpText>
    <label>Exclusif PF / Sans Meuble</label>
    <type>Checkbox</type>
</CustomField>