unpackaged/main/default/objects/Account/fields/Exclusif_VS__c.field-meta.xml
<CustomField>
    <fullName>Exclusif_VS__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check &quot;Exclusive&quot; only if ALL the customer&#39;s park (Dry vehicles) is provided by PETIT FORESTIER (No property, no other rental company, ...)</inlineHelpText>
    <label>Exclusif PF / Sans Véhicule Sec</label>
    <type>Checkbox</type>
</CustomField>