unpackaged/main/default/objects/Account/fields/Exploitation_VEH_PFLO__c.field-meta.xml
<CustomField>
    <fullName>Exploitation_VEH_PFLO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exploitation VEH PFLO</label>
    <type>Checkbox</type>
</CustomField>