unpackaged/main/default/objects/Account/fields/FormuleTotalParcI__c.field-meta.xml
<CustomField>
    <fullName>FormuleTotalParcI__c</fullName>
    <description>Nombre total de contrats en cours</description>
    <formula>46959</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FormuleTotalParcI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>