unpackaged/main/default/objects/Account/fields/Grade_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Grade_Request_Date__c</fullName>
    <label>Grade Request Date</label>
    <type>DateTime</type>
</CustomField>