unpackaged/main/default/objects/Account/fields/Grand_Compte__c.field-meta.xml
<CustomField>
    <fullName>Grand_Compte__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag grand compte</description>
    <label>Grand Compte</label>
    <type>Checkbox</type>
</CustomField>