unpackaged/main/default/objects/Account/fields/Groupe__c.field-meta.xml
<CustomField>
    <fullName>Groupe__c</fullName>
    <label>Groupe</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PFGROUPE</fullName>
            </value>
            <value>
                <fullName>PFLOGROUPE</fullName>
            </value>
            <value>
                <fullName>RESFR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>