unpackaged/main/default/objects/Account/fields/Groupement__c.field-meta.xml
<CustomField>
    <fullName>Groupement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Groupement</label>
    <referenceTo>Groupement__c</referenceTo>
    <relationshipLabel>Comptes(groupement)</relationshipLabel>
    <relationshipName>ComptesGroupement</relationshipName>
    <type>Lookup</type>
</CustomField>