unpackaged/main/default/objects/Account/fields/HierarchieCompte__c.field-meta.xml
<CustomField>
    <fullName>HierarchieCompte__c</fullName>
    <formula>HYPERLINK(&#39;/apex/Synoptic__SynopticAccountView?accountId=&#39;+Id, $Label.CPT_Hierarchie_Afficher )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hiérarchie du compte</label>
    <type>Text</type>
</CustomField>