unpackaged/main/default/objects/Account/fields/IdentifiantNational__c.field-meta.xml
<CustomField>
    <fullName>IdentifiantNational__c</fullName>
    <label>Identifiant national</label>
    <length>255</length>
    <type>Text</type>
</CustomField>