unpackaged/main/default/objects/Account/fields/IdentifiantNationalAlternatif__c.field-meta.xml
<CustomField>
    <fullName>IdentifiantNationalAlternatif__c</fullName>
    <label>Identifiant national alternatif</label>
    <length>255</length>
    <type>Text</type>
</CustomField>