unpackaged/main/default/objects/Account/fields/IdentifiantNationalParent__c.field-meta.xml
<CustomField>
    <fullName>IdentifiantNationalParent__c</fullName>
    <label>Identifiant national du parent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>