unpackaged/main/default/objects/Account/fields/IDEulerHermes__c.field-meta.xml
<CustomField>
    <fullName>IDEulerHermes__c</fullName>
    <label>ID Euler Hermes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>