unpackaged/main/default/objects/Account/fields/IDMDM__c.field-meta.xml
<CustomField>
    <fullName>IDMDM__c</fullName>
    <externalId>true</externalId>
    <label>ID MDM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>