unpackaged/main/default/objects/Account/fields/IGLOO_KEY__c.field-meta.xml
<CustomField>
    <fullName>IGLOO_KEY__c</fullName>
    <label>IGLOO KEY</label>
    <length>25</length>
    <type>Text</type>
</CustomField>