unpackaged/main/default/objects/Account/fields/IGLOO_KEY_Parent__c.field-meta.xml
<CustomField>
    <fullName>IGLOO_KEY_Parent__c</fullName>
    <description>IGLOO key du parent</description>
    <formula>Parent.IGLOO_KEY__c</formula>
    <label>IGLOO KEY - Parent</label>
    <type>Text</type>
</CustomField>