unpackaged/main/default/objects/Account/fields/IrreductibleVIP__c.field-meta.xml
<CustomField>
    <fullName>IrreductibleVIP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Irréductible / VIP</label>
    <type>Checkbox</type>
</CustomField>