unpackaged/main/default/objects/Account/fields/IS_Account_Child_of_DU__c.field-meta.xml
<CustomField>
    <fullName>IS_Account_Child_of_DU__c</fullName>
    <formula>IF( DB_DUNS_Number__c  &lt;&gt;  DB_DUNS_DU__c,TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IS Account Child of DU</label>
    <type>Checkbox</type>
</CustomField>