unpackaged/main/default/objects/Account/fields/IS_Account_Child_of_Principal__c.field-meta.xml
<CustomField>
    <fullName>IS_Account_Child_of_Principal__c</fullName>
    <formula>IF( ParentId  &lt;&gt; NULL,TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IS Account Child of Principal</label>
    <type>Checkbox</type>
</CustomField>