unpackaged/main/default/objects/Account/fields/IsDU__c.field-meta.xml
<CustomField>
    <fullName>IsDU__c</fullName>
    <formula>IF(AND(DB_DUNS_Number__c =  DB_DUNS_DU__c ,DB_DUNS_Number__c &lt;&gt;null,DB_DUNS_DU__c&lt;&gt;null,DB_DUNS_Number__c &lt;&gt;DB_DUNS_GU__c ), TRUE,FALSE)</formula>
    <label>IsDU</label>
    <type>Checkbox</type>
</CustomField>