unpackaged/main/default/objects/Account/fields/KAM__c.field-meta.xml
<CustomField>
    <fullName>KAM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>KAM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Comptes_Utilisateurs_KAM</relationshipName>
    <type>Lookup</type>
</CustomField>