unpackaged/main/default/objects/Account/fields/LangueTravail__c.field-meta.xml
<CustomField>
    <fullName>LangueTravail__c</fullName>
    <label>Langue de travail</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Allemand</fullName>
            </value>
            <value>
                <fullName>Anglais</fullName>
            </value>
            <value>
                <fullName>Arabe</fullName>
            </value>
            <value>
                <fullName>Espagnol</fullName>
            </value>
            <value>
                <fullName>Français</fullName>
            </value>
            <value>
                <fullName>Italien</fullName>
            </value>
            <value>
                <fullName>Néerlandais</fullName>
            </value>
            <value>
                <fullName>Polonais</fullName>
            </value>
            <value>
                <fullName>Portugais</fullName>
            </value>
            <value>
                <fullName>Autre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>