unpackaged/main/default/objects/Account/fields/Last_Flow_Update__c.field-meta.xml
<CustomField>
    <fullName>Last_Flow_Update__c</fullName>
    <label>Last Flow Update</label>
    <length>255</length>
    <type>Text</type>
</CustomField>