unpackaged/main/default/objects/Account/fields/LatePayment__c.field-meta.xml
<CustomField>
    <fullName>LatePayment__c</fullName>
    <description>Alimenté par l&#39;app SF Labs - Roll up qui COUNT le nb de SAD ayant un retard de paiement &gt; 0
Utilisé pour la visibilité du bouton &quot;Nouvelle opportunité&quot; sur les SAD</description>
    <label>Retard de paiement</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>