unpackaged/main/default/objects/Account/fields/Legal_Entity_Sector_Overall_Rating__c.field-meta.xml
<CustomField>
    <fullName>Legal_Entity_Sector_Overall_Rating__c</fullName>
    <formula>IF
(
DB_DUNS_DU__c != &#39;&#39;,
Compte_Parent_legal__r.Note_globale_secteur__c,
Note_globale_secteur__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Legal Entity Sector Overall Rating</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>