unpackaged/main/default/objects/Account/fields/Libelle__c.field-meta.xml
<CustomField>
    <fullName>Libelle__c</fullName>
    <label>Libellé</label>
    <length>100</length>
    <type>Text</type>
</CustomField>