unpackaged/main/default/objects/Account/fields/LienPisteSource__c.field-meta.xml
<CustomField>
    <fullName>LienPisteSource__c</fullName>
    <formula>IF(ISBLANK(TECHIDPiste__c),&#39;&#39;,HYPERLINK(LEFT($Api.Partner_Server_URL_340, FIND( &#39;/services&#39;, $Api.Partner_Server_URL_340)) &amp; TECHIDPiste__c, if(ISBLANK(TECHNumeroPiste__c), TECHIDPiste__c, TECHNumeroPiste__c)))</formula>
    <label>Lien vers la piste source</label>
    <type>Text</type>
</CustomField>