unpackaged/main/default/objects/Account/fields/Ligne1__c.field-meta.xml
<CustomField>
    <fullName>Ligne1__c</fullName>
    <label>Ligne 1 (-Facturation-)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>