unpackaged/main/default/objects/Account/fields/Ligne1Exploitation__c.field-meta.xml
<CustomField>
    <fullName>Ligne1Exploitation__c</fullName>
    <label>Ligne 1 (-Exploitation-)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>