unpackaged/main/default/objects/Account/fields/Ligne2__c.field-meta.xml
<CustomField>
    <fullName>Ligne2__c</fullName>
    <label>Ligne 2 (-Facturation-)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>