unpackaged/main/default/objects/Account/fields/Ligne2Exploitation__c.field-meta.xml
<CustomField>
    <fullName>Ligne2Exploitation__c</fullName>
    <label>Ligne 2 (Exploitation)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>