unpackaged/main/default/objects/Account/fields/Ligne3__c.field-meta.xml
<CustomField>
    <fullName>Ligne3__c</fullName>
    <label>Ligne 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>