unpackaged/main/default/objects/Account/fields/Ligne3Exploitation__c.field-meta.xml
<CustomField>
    <fullName>Ligne3Exploitation__c</fullName>
    <label>Ligne 3 (Exploitation)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>