unpackaged/main/default/objects/Account/fields/Ligne_1_Facturation_Client__c.field-meta.xml
<CustomField>
    <fullName>Ligne_1_Facturation_Client__c</fullName>
    <description>Ligne 1 facturation compte de facturation</description>
    <formula>Compte_de_facturation__r.Ligne1__c</formula>
    <label>Ligne 1 (Facturation)</label>
    <type>Text</type>
</CustomField>