unpackaged/main/default/objects/Account/fields/Ligne_2_Facturation_Client__c.field-meta.xml
<CustomField>
    <fullName>Ligne_2_Facturation_Client__c</fullName>
    <formula>Compte_de_facturation__r.Ligne2__c</formula>
    <label>Ligne 2 (Facturation)</label>
    <type>Text</type>
</CustomField>