unpackaged/main/default/objects/Account/fields/Liste1erEuro__c.field-meta.xml
<CustomField>
    <fullName>Liste1erEuro__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Liste1erEuro</label>
    <type>Checkbox</type>
</CustomField>