unpackaged/main/default/objects/Account/fields/ListeNoire__c.field-meta.xml
<CustomField>
    <fullName>ListeNoire__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Refus</label>
    <type>Checkbox</type>
</CustomField>