unpackaged/main/default/objects/Account/fields/Mode_de_reglement__c.field-meta.xml
<CustomField>
    <fullName>Mode_de_reglement__c</fullName>
    <label>Mode de règlement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>B00</fullName>
            </value>
            <value>
                <fullName>CB COMPTANTB31</fullName>
            </value>
            <value>
                <fullName>CB 30 J FDM LE 10C00</fullName>
            </value>
            <value>
                <fullName>CHQ COMPTANTC10</fullName>
            </value>
            <value>
                <fullName>CHQ 10 JC15</fullName>
            </value>
            <value>
                <fullName>CHQ 15 JC30</fullName>
            </value>
            <value>
                <fullName>CHQ 30 JC31</fullName>
            </value>
            <value>
                <fullName>CHQ 30 J FDM LE 10C3C</fullName>
            </value>
            <value>
                <fullName>CHQ 30 J FDM LE 5C3F</fullName>
            </value>
            <value>
                <fullName>CHQ 30 J FDMC3Q</fullName>
            </value>
            <value>
                <fullName>CHQ 30 J FDM LE 15C45</fullName>
            </value>
            <value>
                <fullName>CHQ 45 JC60</fullName>
            </value>
            <value>
                <fullName>CHQ 60 JC61</fullName>
            </value>
            <value>
                <fullName>CHQ 60 J FDM LE 10C6F</fullName>
            </value>
            <value>
                <fullName>CHQ 60 J FDMCF0</fullName>
            </value>
            <value>
                <fullName>CHQ FDMCF4</fullName>
            </value>
            <value>
                <fullName>CHQ FDM 45 jCFQ</fullName>
            </value>
            <value>
                <fullName>CHEQUE FDM LE 15E00</fullName>
            </value>
            <value>
                <fullName>ESP COMPTANTE30</fullName>
            </value>
            <value>
                <fullName>ESPECES 30 JM3Q</fullName>
            </value>
            <value>
                <fullName>MANDAT30 J FDM LE 15P00</fullName>
            </value>
            <value>
                <fullName>PLV COMPTANTP10</fullName>
            </value>
            <value>
                <fullName>PRELEV 10 JP15</fullName>
            </value>
            <value>
                <fullName>PRELEVEMENT 15 JOURSP20</fullName>
            </value>
            <value>
                <fullName>PLV 20 JP30</fullName>
            </value>
            <value>
                <fullName>PLV 30 JP31</fullName>
            </value>
            <value>
                <fullName>PLV 30 J FDM LE 10P3F</fullName>
            </value>
            <value>
                <fullName>PLV 30 J FDMP45</fullName>
            </value>
            <value>
                <fullName>PLV 45 JP60</fullName>
            </value>
            <value>
                <fullName>PLV 60 JP61</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>