unpackaged/main/default/objects/Account/fields/Mode_de_reglement_CEGID__c.field-meta.xml
<CustomField>
    <fullName>Mode_de_reglement_CEGID__c</fullName>
    <label>Mode de reglement CEGID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>