unpackaged/main/default/objects/Account/fields/Mode_facturation__c.field-meta.xml
<CustomField>
    <fullName>Mode_facturation__c</fullName>
    <defaultValue>&quot;Début de mois&quot;</defaultValue>
    <label>Mode de facturation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Mode_facturation</valueSetName>
    </valueSet>
</CustomField>