unpackaged/main/default/objects/Account/fields/Mode_reglement__c.field-meta.xml
<CustomField>
    <fullName>Mode_reglement__c</fullName>
    <defaultValue>&quot;Prélèvement automatique&quot;</defaultValue>
    <label>Mode de reglement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Mode_reglement</valueSetName>
    </valueSet>
</CustomField>