unpackaged/main/default/objects/Account/fields/Montant_remise_pied_de_facture__c.field-meta.xml
<CustomField>
    <fullName>Montant_remise_pied_de_facture__c</fullName>
    <label>Montant remise pied de facture</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>