unpackaged/main/default/objects/Account/fields/N_client_meuble__c.field-meta.xml
<CustomField>
    <fullName>N_client_meuble__c</fullName>
    <label>N° client meuble</label>
    <length>60</length>
    <type>Text</type>
</CustomField>