unpackaged/main/default/objects/Account/fields/N_Compte_Igloo__c.field-meta.xml
<CustomField>
    <fullName>N_Compte_Igloo__c</fullName>
    <description>Champ concaténé &quot;Numéro_contrat_igloo&quot;_&quot;Adresse_contrat&quot;</description>
    <label>N° Compte Igloo</label>
    <length>24</length>
    <type>Text</type>
</CustomField>