unpackaged/main/default/objects/Account/fields/N_Compte_Igloo_Meubles__c.field-meta.xml
<CustomField>
    <fullName>N_Compte_Igloo_Meubles__c</fullName>
    <label>N° Compte Igloo Meubles</label>
    <length>24</length>
    <type>Text</type>
</CustomField>