unpackaged/main/default/objects/Account/fields/N_igloo__c.field-meta.xml
<CustomField>
    <fullName>N_igloo__c</fullName>
    <formula>LEFT(N_Compte_Igloo__c , 7)</formula>
    <label>N igloo</label>
    <type>Text</type>
</CustomField>