unpackaged/main/default/objects/Account/fields/Name_3__c.field-meta.xml
<CustomField>
    <fullName>Name_3__c</fullName>
    <label>Name 3</label>
    <length>40</length>
    <type>Text</type>
</CustomField>