unpackaged/main/default/objects/Account/fields/Nb_contacts__c.field-meta.xml
<CustomField>
    <fullName>Nb_contacts__c</fullName>
    <description>nombre des contacts</description>
    <inlineHelpText>nombre des contacts</inlineHelpText>
    <label>Nb contacts</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>