unpackaged/main/default/objects/Account/fields/Nb_Parcs__c.field-meta.xml
<CustomField>
    <fullName>Nb_Parcs__c</fullName>
    <label>Nb Parcs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>