unpackaged/main/default/objects/Account/fields/Nb_Potentiels_countainer__c.field-meta.xml
<CustomField>
    <fullName>Nb_Potentiels_countainer__c</fullName>
    <formula>if( count_potentiel_container__c= 0 ,NULL, (PotentielContainers__c) )</formula>
    <label>Nb Potentiels countainer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>